fixed mobile spacing issues using chrome dev tools

--- a/styles/style.css
+++ b/styles/style.css
@@ -6,12 +6,30 @@ body {
     background-attachment: fixed;
 }
 
+.basic-div {
+    margin-bottom: -10px;
+}
+.select-div {
+    margin-top: 20px;
+}
+
+.end-div {
+    margin-top: 20px;
+}
+
 #title {
     color: #f7dda9;
     text-align: center;
     font-family: 'Megrim', cursive;
     font-size: 3rem;
-    margin-top: 20px;
+    margin: 20px 15px 15px 15px;
+}
+
+p {
+    color: #f7dda9;
+    font-family: 'Barlow Condensed', sans-serif;
+    font-size: 1.3rem;
+    margin: 20px 0 10px 0;
 }
 
 #description {
@@ -19,7 +37,7 @@ body {
     text-align: center;
     font-family: 'Poiret One', cursive;
     font-size: 1.5rem;
-    margin: 15px;
+    margin: 10px 15px 20px 15px;
 }
 
 #survey-form {
@@ -38,6 +56,10 @@ label {
     color: #f7dda9;
     font-family: 'Barlow Condensed', sans-serif;
     font-size: 1.3rem;
+}
+
+#lessons-label {
+    padding-top: 20px;
 }
 
 
@@ -105,12 +127,6 @@ textarea {
     background-image: linear-gradient(145deg, rgb(241, 179, 64), #f7cf80);
 }
 
-p {
-    color: #f7dda9;
-    font-family: 'Barlow Condensed', sans-serif;
-    font-size: 1.3rem;
-    margin: 10px 0 10px 0;
-}
 
 #submit-label {
     margin-top: 20px;
